[#1] sai/dileep - Dev Setup
What are the changes?

* Automated setting up on npm setup
* Sets the commit template, .env

Why do we need this change?

* commit template need to be common for every dev.

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "test"
   },
   "scripts": {
+    "setup": "bash bin/setup.sh",
     "start": "node .",
     "test": "mocha -r test/"
   },
