[#21] Abin - moved npm test to mocha
What are the changes?

* mocha -r test/ -> mocha

Why do we need this change?

* to run github actions

* CIS (continuous integration system)

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "setup": "bash bin/setup.sh",
     "start": "node .",
-    "test": "mocha -r test/"
+    "test": "mocha"
   },
   "repository": {
     "type": "git",
