[#3] dileep/vivek - join a game
What are the changes?

* Handling join in backend
* Tested /join
* Used express session

Why do we need this change?

* To allow user to join a game using valid room id.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -38,7 +38,7 @@
     "getter-return": "error",
     "grouped-accessor-pairs": "warn",
     "global-require": "error",
-    "handle-callback-err": "error",
+    "handle-callback-err": "off",
     "id-length": "error",
     "key-spacing": "error",
     "max-len": "off",
