--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "eslint": "^8.21.0",
     "mocha": "^10.0.0",
+    "nodemon": "^2.0.19",
     "supertest": "^6.2.4"
   }
 }
