[#1] Suresh - New testing dependencies and linter rules
What are the changes?

* Added Eslint Rules.
* Added Chai dev dependency

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -41,7 +41,7 @@
     "handle-callback-err": "off",
     "id-length": "error",
     "key-spacing": "error",
-    "max-len": "off",
+    "max-len": "warn",
     "max-params": [
       "error",
       {
@@ -88,6 +88,7 @@
       ],
       "rules": {
         "no-magic-numbers": "off",
+        "max-len": "off",
         "max-statements": "off",
         "no-console": "off",
         "no-undef": "warn",
