--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "c8": "^7.12.0",
+    "chai": "^4.3.6",
     "eslint": "^8.21.0",
     "mocha": "^10.0.0",
     "nodemon": "^2.0.19",
