--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "redis": "^4.3.0"
   },
   "devDependencies": {
     "c8": "^7.12.0",
